# bili-desktop

./: .eslintignore  .eslintrc  .prettierrc  README.md  lint-staged.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  test.html  tsconfig.json  vite.config.ts
.husky/: pre-commit
public/rank/: 0.avif  1.avif  2.avif  3.avif  4.avif  5.avif  6.avif  7.avif  8.avif  9.avif
src/: App.css  App.tsx  main.tsx  router.tsx  styles.css  type.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  mpd.rs
src-tauri/src/web/: server.rs
src-tauri/src/web/api/: proxy_m4s.rs
src/api/login/: index.ts
src/api/login/qr-code/: index.ts  type.ts
src/api/user/: index.ts  type.ts
src/api/video/: index.ts  type.ts
src/components/ThemeProvider/: ThemeProvider.tsx
src/components/loading/: Loading.tsx
src/constant/: commond.ts  login.ts  video.ts
src/core/http/: DashHttp.ts  Http.ts  constant.ts  index.ts  type.ts
src/core/player/: DashSource.ts
src/core/utils/: format.ts
src/layout/: Aside.tsx  Header.tsx  Layout.tsx
src/layout/Aside/: Aside.tsx  User.tsx
src/layout/Aside/Login/: Login.tsx  PasswordLogin.tsx  QrCodeLogin.tsx  SmsLogin.tsx  tab.tsx
src/layout/store/: scroll.ts
src/lib/login/qr-code/: index.ts
src/lib/user/: index.ts
src/modules/home/: routes.tsx
src/modules/home/api/: index.ts  type.ts
src/modules/home/components/: Layout.tsx  VideoItem.tsx
src/store/loading/: index.ts
src/store/token/: index.ts
src/store/user/: index.ts
src/views/home/: Page.tsx
src/views/login/: Page.tsx
(+10 files in other folders)
